--- a/assets/css/sobre/sobre-titulo.css
+++ b/assets/css/sobre/sobre-titulo.css
@@ -1,5 +1,17 @@
 .sobre__titulo {
     color: #8d0606;
     font-family: Pacifico, cursive;
-    font-size: 3.1875em;
+    
+}
+
+@media screen and (min-width: 0) {
+    .sobre__titulo {
+        font-size: 2em;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .sobre__titulo {
+        font-size: 3.1875em;
+    }
 }
