--- a/assets/css/cabecalho.css
+++ b/assets/css/cabecalho.css
@@ -4,4 +4,18 @@
     justify-content: space-between;
     padding-inline: 2em;
     background: #f9f9f9;
+}
+
+@media screen and (min-width: 0) {
+    .cabecalho {
+        padding: 0 1em;
+        justify-content: center;
     }
+}
+
+@media screen and (min-width: 768px) {
+    .cabecalho {
+        padding: 0 5em;
+        justify-content: space-between;
+    }
+}
