--- a/assets/css/sobre/sobre.css
+++ b/assets/css/sobre/sobre.css
@@ -1,4 +1,16 @@
 .sobre {
     text-align: center;
-    padding: 2.5em;
+    
+}
+
+@media screen and (min-width: 0) {
+    .sobre {
+        padding: 2.5em 1em;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .sobre {
+        padding: 2.5em;
+    }
 }
